--- a/main.css
+++ b/main.css
@@ -209,7 +209,7 @@ section == Skills
     left:0;
     background-color: gray;
 }
-.js-bar::before{
+.htmx-bar::before{
     content:"";
     position: absolute;
     width:30%;
@@ -241,18 +241,11 @@ section == Skills
     left:0;
     background-color: gray;
 }
-.jq-bar::before{
-    content:"";
-    position: absolute;
-    width:15%;
-    height:25px;
-    left:0;
-    background-color: gray;
-}
+
 .git-bar::before{
     content:"";
     position: absolute;
-    width:5%;
+    width:25%;
     height:25px;
     left:0;
     background-color: gray;
@@ -260,7 +253,7 @@ section == Skills
 .linux-bar::before{
     content:"";
     position: absolute;
-    width:5%;
+    width:25%;
     height:25px;
     left:0;
     background-color: gray;
